<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_menu_home"
            android:title="@string/menu_home" />
        <item
            android:id="@+id/nav_gallery"
            android:icon="@drawable/ic_menu_healthcare"
            android:title="@string/menu_Care" />
        <item
            android:id="@+id/nav_slideshow"
            android:icon="@drawable/ic_menu_task"
            android:title="@string/menu_CreateTask" />
        <item
            android:id="@+id/nav_tools"
            android:icon="@drawable/ic_menu_article"
            android:title="@string/menu_Article" />
    </group>

    <item android:title="Communicate">
        <menu>
            <item
                android:id="@+id/nav_share"
                android:icon="@drawable/ic_menu_group"
                android:title="@string/menu_group" />
            <item
                android:id="@+id/nav_send"
                android:icon="@drawable/ic_menu_send"
                android:title="@string/menu_send" />
        </menu>
    </item>

</menu>
