<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Profil_Activity"
    android:padding="16dp"
    android:orientation="vertical">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="300dp"
            android:orientation="vertical"
            android:padding="10dp">

            <de.hdodenhof.circleimageview.CircleImageView
                android:layout_marginTop="80dp"
                android:layout_width="match_parent"
                android:layout_height="100dp"
                android:src="@drawable/ic_pp_wisatawan" />
        </LinearLayout>

        <TextView
            android:id="@+id/name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/Nama"
            android:textSize="22dp"
            android:textStyle="bold"
            android:layout_marginBottom="5dp"/>
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <TextView
                android:id="@+id/isi_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Nama anda"
                android:textSize="16dp"/>
            <EditText
                android:id="@+id/editnama"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:visibility="invisible"/>
        </RelativeLayout>

        <TextView
            android:id="@+id/tele"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Nomor Telephone"
            android:textSize="22dp"
            android:textStyle="bold"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="5dp"/>
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <TextView
                android:id="@+id/isi_tele"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="089812324432"
                android:textSize="16dp"/>
            <EditText
                android:id="@+id/edittele"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="phone"
                android:visibility="invisible"/>
        </RelativeLayout>

        <TextView
            android:id="@+id/Penyakit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Riwayat Penyakit"
            android:textSize="22dp"
            android:textStyle="bold"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="5dp"/>
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <TextView
                android:id="@+id/isi_penyakit"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/DefaultPenyakit"
                android:textSize="16dp"/>
            <EditText
                android:id="@+id/editpenyakit"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:visibility="invisible"/>
        </RelativeLayout>

        <TextView
            android:id="@+id/Obat"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Riwayat Penyakit"
            android:textSize="22dp"
            android:textStyle="bold"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="5dp"/>
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <TextView
                android:id="@+id/isi_Obat"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/DefaultObat"
                android:textSize="16dp"/>
            <EditText
                android:id="@+id/editobat"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:visibility="invisible"/>
        </RelativeLayout>

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="save"
            android:layout_alignParentBottom="true"
            android:onClick="SaveData"/>
    </LinearLayout>
</ScrollView>